# microscopemetrics-omero

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml  tox.ini
.github/workflows/: run_tests_pr.yml  run_tests_push.yml
deployment/: Dockerfile  requirements.txt
deployment/microscope-metrics/: Clean_Datasets.py  Run_Metrics.py
deployment/omero-server/: Dockerfile
deployment/omero-server/microscope_metrics/: Clean_Datasets.py  Run_Metrics.py  Validate_measurements.py
deployment/omero-server/microscopemetrics_omero/: Run_Metrics.py
docs/: main.md
docs/example_configs/: device_config.ini  device_config.yaml  main_config.ini  main_config.yaml  monthly_config.ini  monthly_config.yml  yearly_config.ini  yearly_config.yml
src/local_scripts/: run_metrics.py
src/microscopemetrics_omero/: dump.py  load.py  omero_tools.py  process.py
src/microscopemetrics_omero/config/: main_config.yaml  study_config.yaml  yearly_config.yml
src/microscopemetricsomero/: analysis.py  omero_tools.py
src/microscopemetricsomero/interface/: omero.py
src/omero_scripts/: Artificial_datasets_generator.py  Clean_Datasets.py  Run_Metrics.py  Validate_measurements.py
tests/: conftest.py  docker-compose.yaml  project_structure.yaml  test_dump.py  test_infra.py  test_load.py  test_process.py
tests/data/config_files/argolight_b/: study_config.yaml
tests/data/config_files/argolight_e/: study_config.yaml
tests/data/config_files/field_illumination/: study_config.yaml
tests/data/config_files/field_illumination_config/: study_config.yaml
tests/omero-server/: Dockerfile  microscopemetrics-0.2.2-py3-none-any.whl  microscopemetrics_omero-0.2.0-py3-none-any.whl
tests/omero-server/microscope_metrics/: Artificial_datasets_generator.py  Run_Metrics.py
tests/omero-server/microscopemetrics_omero/: main_config.yaml
